--- a/src/main/resources/uk/ac/roehampton/ziparound/hello-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Button?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="uk.ac.roehampton.ziparound.HelloController">
+      fx:controller="uk.ac.roehampton.ziparound.application.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
