--- a/src/main/resources/uk/ac/roehampton/ziparound/application/test-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/test-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.TestController">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.controllers.TestController">
 
     <!-- Top Panel -->
     <top>
