--- a/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 <?import javafx.geometry.Insets?>
-<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.MainController">
+<BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.controllers.MainController">
 
     <!-- Top Panel -->
     <top>
