--- a/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
@@ -11,14 +11,7 @@
         <Panel fx:id="topPanel">
             <children>
                 <HBox alignment="CENTER_RIGHT" spacing="10">
-                    <padding>
-                        <Insets top="10" bottom="10" left="10" right="10"/>
-                    </padding>
-                    <Label text="Example" />
-                    <Button text="Primary" styleClass="btn btn-primary"/>
-                    <Button text="Danger" styleClass="btn btn-danger"/>
-                    <Hyperlink text="Click me"/>
-
+                    <Label text="Main View (Homepage)" />
                 </HBox>
             </children>
         </Panel>
