--- a/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/main-view.fxml
@@ -1,25 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.collections.FXCollections?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.controllers.MainController">
-
-    <!-- Top Panel -->
-    <top>
-        <Panel fx:id="topPanel">
-            <children>
-                <HBox alignment="CENTER_RIGHT" spacing="10">
-                    <Label text="Main View (Homepage)" />
-                </HBox>
-            </children>
-        </Panel>
-    </top>
-
-    <!-- Center content -->
-    <center>
-
-    </center>
-
+    <!-- Emptiness-->
 </BorderPane>
