--- a/src/main/resources/uk/ac/roehampton/ziparound/application/login-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/login-view.fxml
@@ -15,10 +15,8 @@
                   style="-fx-background-color: white; -fx-padding: 20; -fx-background-radius: 15; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10,0,0,4);">
 
                 <!-- Logo -->
-                <ImageView fx:id="logo" fitWidth="80" fitHeight="70" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@imgs/logo_circular.png"/>
-                    </image>
+                <ImageView fitWidth="80" fitHeight="70" pickOnBounds="true" preserveRatio="true">
+                    <Image url="@imgs/logo_circular.png"/>
                 </ImageView>
 
                 <!-- Welcome Text -->
@@ -36,7 +34,7 @@
                 <Label fx:id="hint" textFill="red" text="Please enter your credentials."/>
 
                 <!-- Login Button -->
-                <Button fx:id="loginButton" text="Login" onAction="#checkCredentials"/>
+                <Button fx:id="loginButton" text="Login" onAction="#login"/>
 
             </VBox>
         </StackPane>
