Added refresh button in header and added Updatable interface to be able to update and clear the current page dynamically

--- a/src/main/resources/modern.css
+++ b/src/main/resources/modern.css
@@ -220,3 +220,22 @@
     -fx-background-color: derive(#446356, 30%);
     -fx-text-fill: white;
 }
+
+
+/* Special SVG Buttons */
+.button.main.refresh {
+    -icon-paint: #446356;
+    -fx-background-color: -icon-paint;
+    -size: 24;
+    -fx-min-height: -size;
+    -fx-min-width: -size;
+    -fx-max-height: -size;
+    -fx-max-width: -size;
+
+    -fx-shape: "M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"
+
+    }
+
+.button.main.refresh:hover {
+    -icon-paint: grey;
+    }
