--- a/src/main/resources/uk/ac/roehampton/ziparound/application/booking-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/booking-view.fxml
@@ -4,7 +4,7 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.controllers.BookingController">
 
     <top>
-        <fx:include fx:id="header" source="components/header.fxml"/>
+        <fx:include fx:id="header" source="modules/header.fxml"/>
     </top>
 
     <!-- Center content -->
