--- a/src/main/resources/uk/ac/roehampton/ziparound/application/home-view.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/home-view.fxml
@@ -7,7 +7,7 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml" fx:controller="uk.ac.roehampton.ziparound.application.controllers.HomeController" style="-fx-background-color: linear-gradient(to bottom right, #6B9080, #A3B18A);">
 
     <top>
-        <fx:include fx:id="header" source="components/header.fxml"/>
+        <fx:include fx:id="header" source="modules/header.fxml"/>
     </top>
 
     <center>
