--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -6,7 +6,7 @@
 <?import javafx.geometry.Insets?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="150" maxWidth="600"
+            fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="300" maxWidth="400"
             styleClass="booking-card">
 
     <VBox spacing="14"
@@ -17,9 +17,7 @@
           alignment="CENTER">
 
         <HBox alignment="CENTER_LEFT" spacing="10">
-            <Label text="Booking #" style="-fx-font-weight: bold;"/>
-            <Label fx:id="bookingIdText"
-                   style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
+            <Label fx:id="bookingIdText" style="-fx-font-weight: bold;"/>
 
             <Region HBox.hgrow="ALWAYS"/>
 
@@ -65,9 +63,14 @@
 
         <Separator/>
 
-        <HBox fx:id="staffInfoBox" spacing="8" alignment="CENTER_LEFT">
-            <Label text="Approved by:"/>
-            <Label fx:id="staffLabel"/>
+
+        <HBox alignment="CENTER_RIGHT" spacing="10">
+            <HBox fx:id="staffBox" spacing="8" alignment="CENTER_LEFT">
+                <Label fx:id="staffLabel"/>
+                <Button text="Approve/Refuse"
+                        fx:id="approveButton"
+                        styleClass="main"/>
+            </HBox>
         </HBox>
 
         <HBox alignment="CENTER_RIGHT" spacing="10">
@@ -78,10 +81,6 @@
 
             <Button text="Save Changes"
                     fx:id="saveButton"
-                    styleClass="main"/>
-
-            <Button text="Approve/Refuse"
-                    fx:id="approveButton"
                     styleClass="main"/>
 
             <Button text="Delete"
