--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -5,92 +5,109 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="300" maxWidth="400"
+            fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="300" maxWidth="800"
             styleClass="booking-card">
 
-    <VBox spacing="14"
-          AnchorPane.topAnchor="0"
-          AnchorPane.bottomAnchor="0"
-          AnchorPane.leftAnchor="0"
-          AnchorPane.rightAnchor="0"
-          alignment="CENTER">
+    <HBox spacing="14" alignment="CENTER">
 
-        <HBox alignment="CENTER_LEFT" spacing="10">
-            <Label fx:id="bookingIdText" style="-fx-font-weight: bold;"/>
+        <VBox fx:id="container" alignment="CENTER" spacing="10" >
 
-            <Region HBox.hgrow="ALWAYS"/>
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10"/>
+            </padding>
 
-            <Label fx:id="statusText"
-                   style="-fx-padding: 4 10;
+            <ImageView  fx:id="bikeImage" pickOnBounds="true" preserveRatio="true" fitHeight="350"/>
+
+        </VBox>
+
+        <VBox spacing="14"
+              AnchorPane.topAnchor="0"
+              AnchorPane.bottomAnchor="0"
+              AnchorPane.leftAnchor="0"
+              AnchorPane.rightAnchor="0"
+              alignment="CENTER">
+
+            <HBox alignment="CENTER_LEFT" spacing="10">
+                <Label fx:id="bookingIdText" style="-fx-font-weight: bold;"/>
+
+                <Region HBox.hgrow="ALWAYS"/>
+
+                <Label fx:id="statusText"
+                       style="-fx-padding: 4 10;
                           -fx-background-radius: 6;
                           -fx-font-weight: bold;"/>
-        </HBox>
-
-        <Separator/>
-
-        <GridPane hgap="10" vgap="8">
-            <columnConstraints>
-                <ColumnConstraints minWidth="130"/>
-                <ColumnConstraints hgrow="ALWAYS"/>
-            </columnConstraints>
-
-            <!-- Bookable -->
-            <Label text="Booked Item:" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-
-            <Label text="Item" fx:id="bookableText" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-
-            <!-- Start -->
-            <Label text="Start Time:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <HBox spacing="6" GridPane.rowIndex="1" GridPane.columnIndex="1">
-                <DatePicker fx:id="startDatePicker"/>
-                <TextField fx:id="startTimeField" promptText="HH:mm"/>
             </HBox>
 
-            <!-- End -->
-            <Label text="End Time:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-            <HBox spacing="6" GridPane.rowIndex="2" GridPane.columnIndex="1">
-                <DatePicker fx:id="endDatePicker"/>
-                <TextField fx:id="endTimeField" promptText="HH:mm"/>
+            <Separator/>
+
+            <GridPane hgap="10" vgap="8">
+
+                <columnConstraints>
+                    <ColumnConstraints minWidth="130"/>
+                    <ColumnConstraints hgrow="ALWAYS"/>
+                </columnConstraints>
+
+                <!-- Bookable -->
+                <Label text="Booked Item:" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+
+                <Label text="Item" fx:id="bookableText" GridPane.rowIndex="0" GridPane.columnIndex="2"/>
+
+                <!-- Start -->
+                <Label text="Start Time:" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+                <HBox spacing="6" GridPane.rowIndex="1" GridPane.columnIndex="2">
+                    <DatePicker fx:id="startDatePicker"/>
+                    <TextField fx:id="startTimeField" promptText="HH:mm"/>
+                </HBox>
+
+                <!-- End -->
+                <Label text="End Time:" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <HBox spacing="6" GridPane.rowIndex="2" GridPane.columnIndex="2">
+                    <DatePicker fx:id="endDatePicker"/>
+                    <TextField fx:id="endTimeField" promptText="HH:mm"/>
+                </HBox>
+
+                <!-- Created -->
+                <Label text="Created On:" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+                <Label fx:id="createdOnLabel"
+                       GridPane.rowIndex="3"
+                       GridPane.columnIndex="2"/>
+            </GridPane>
+
+            <Separator/>
+
+
+            <HBox alignment="CENTER_RIGHT" spacing="10">
+                <HBox fx:id="staffBox" spacing="8" alignment="CENTER_LEFT">
+                    <Label fx:id="staffLabel"/>
+                    <Button text="Approve/Refuse"
+                            fx:id="approveButton"
+                            styleClass="main"/>
+                </HBox>
             </HBox>
 
-            <!-- Created -->
-            <Label text="Created On:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-            <Label fx:id="createdOnLabel"
-                   GridPane.rowIndex="3"
-                   GridPane.columnIndex="1"/>
-        </GridPane>
+            <HBox alignment="CENTER_RIGHT" spacing="10">
+                <Label fx:id="hintLabel"
+                       style="-fx-text-fill: #8a2e2e;"/>
 
-        <Separator/>
+                <Region HBox.hgrow="ALWAYS"/>
 
-
-        <HBox alignment="CENTER_RIGHT" spacing="10">
-            <HBox fx:id="staffBox" spacing="8" alignment="CENTER_LEFT">
-                <Label fx:id="staffLabel"/>
-                <Button text="Approve/Refuse"
-                        fx:id="approveButton"
+                <Button text="Save Changes"
+                        fx:id="saveButton"
                         styleClass="main"/>
+
+                <Button text="Delete"
+                        fx:id="deleteButton"
+                        styleClass="main, red"/>
+
+                <Button text="Cancel"
+                        fx:id="cancelButton"
+                        styleClass="main, red"/>
             </HBox>
-        </HBox>
 
-        <HBox alignment="CENTER_RIGHT" spacing="10">
-            <Label fx:id="hintLabel"
-                   style="-fx-text-fill: #8a2e2e;"/>
+        </VBox>
+    </HBox>
 
-            <Region HBox.hgrow="ALWAYS"/>
-
-            <Button text="Save Changes"
-                    fx:id="saveButton"
-                    styleClass="main"/>
-
-            <Button text="Delete"
-                    fx:id="deleteButton"
-                    styleClass="main, red"/>
-
-            <Button text="Cancel"
-                    fx:id="cancelButton"
-                    styleClass="main, red"/>
-        </HBox>
-
-    </VBox>
 </AnchorPane>
