--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -8,8 +8,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml"
+            fx:id="root"
             fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="300" maxWidth="800"
-            styleClass="booking-card">
+            styleClass="booking-card"
+            onMouseClicked="#hideShowButtons">
 
     <HBox spacing="14" alignment="CENTER">
 
@@ -31,7 +33,12 @@
               alignment="CENTER">
 
             <HBox alignment="CENTER_LEFT" spacing="10">
-                <Label fx:id="bookingIdText" style="-fx-font-weight: bold;"/>
+                <Label fx:id="bookingIdText" style="
+                            -fx-text-fill: #446356;
+                            -fx-padding: 4 10;
+                            -fx-font-size: 20px;
+                            -fx-background-radius: 6;
+                            -fx-font-weight: bold;"/>
 
                 <Region HBox.hgrow="ALWAYS"/>
 
@@ -82,13 +89,14 @@
             <HBox alignment="CENTER_RIGHT" spacing="10">
                 <HBox fx:id="staffBox" spacing="8" alignment="CENTER_LEFT">
                     <Label fx:id="staffLabel"/>
-                    <Button text="Approve/Refuse"
+                    <Button text="Approve/Reject"
                             fx:id="approveButton"
+                            onAction="#approveReject"
                             styleClass="main"/>
                 </HBox>
             </HBox>
 
-            <HBox alignment="CENTER_RIGHT" spacing="10">
+            <HBox fx:id="buttonBox" alignment="CENTER_RIGHT" spacing="10">
                 <Label fx:id="hintLabel"
                        style="-fx-text-fill: #8a2e2e;"/>
 
@@ -96,14 +104,17 @@
 
                 <Button text="Save Changes"
                         fx:id="saveButton"
+                        onAction="#save"
                         styleClass="main"/>
 
                 <Button text="Delete"
                         fx:id="deleteButton"
+                        onAction="#delete"
                         styleClass="main, red"/>
 
                 <Button text="Cancel"
                         fx:id="cancelButton"
+                        onAction="#cancel"
                         styleClass="main, red"/>
             </HBox>
 
