--- a/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
+++ b/src/main/resources/uk/ac/roehampton/ziparound/application/modules/booking-card.fxml
@@ -11,7 +11,8 @@
             fx:id="root"
             fx:controller="uk.ac.roehampton.ziparound.application.controllers.components.BookingCardController" maxHeight="300" maxWidth="800"
             styleClass="booking-card"
-            onMouseClicked="#hideShowButtons">
+            onMouseClicked="#hideShowButtons"
+            style="-fx-cursor: hand;">
 
     <HBox spacing="14" alignment="CENTER">
 
@@ -99,6 +100,8 @@
             <HBox fx:id="buttonBox" alignment="CENTER_RIGHT" spacing="10">
                 <Label fx:id="hintLabel"
                        style="-fx-text-fill: #8a2e2e;"/>
+
+                <Label fx:id="hintText"/>
 
                 <Region HBox.hgrow="ALWAYS"/>
 
