Added range select in calendarView for add booking page

--- a/src/main/resources/modern.css
+++ b/src/main/resources/modern.css
@@ -268,3 +268,11 @@
 .button.main.refresh:hover {
     -icon-paint: grey;
     }
+
+.selected-day {
+    -fx-background-color: #c3e3d6 !important;
+}
+/* Override the default CalendarFX selection color */
+.day:selected {
+    -fx-background-color: transparent;
+}
